Fix a bug overlap EMBL popup and logo + icon banner, make it full width , change background color and  update style close button to make it easier to spot

--- a/src/components/EMBLDropdown/style.css
+++ b/src/components/EMBLDropdown/style.css
@@ -8,22 +8,34 @@
   transition-duration: var(--timing-medium);
   opacity: 0;
   transform: translateY(-50vh);
+  position: relative;
 
   &.visible {
     visibility: visible;
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(-10px);
+    z-index: 5;
+    /*position: relative;*/
   }
 
   & .dropdown-pane.embl-dropdown {
     position: fixed;
+    background-color: #111;
     top: calc(38px + var(--spacing-medium));
     left: initial;
-    right: var(--spacing-medium);
+    /*right: var(--spacing-medium);*/
     display: block;
     width: calc(100vw - 2 * var(--spacing-medium));
-    max-width: 1400px;
+    /*max-width: 1400px;*/
     visibility: visible;
+    border: none;
+
+    & .close-button {
+      font-size: 300%;
+    }
+    & .close-button:hover {
+      color: white;
+    }
 
     & h3,
     & h5,
